# agents

./: .gitignore  ckan_registration_workflow.ipynb
ckan-agent-api/: .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE  LOGGING_GUIDE.md  README.md  TOOL_DIAGRAMS.md  TOOL_DIAGRAMS.mmd  agents.code-workspace  environment.yml  langgraph.json  package-lock.json  pyproject.toml
ckan-agent-api/app/: __init__.py  auth_context.py  cli.py  llm.py  main.py  settings.py
ckan-agent-api/archive/: README.md
ckan-agent-api/docs/: dso-agent-api-reference.md  webodm-ckan-context.md
ckan-agent-api/evals/: online_evaluators.py
ckan-agent-api/scripts/: probe_tool_calling.py
ckan-agent-api/tests/: conftest.py  ess_dive_ckan_test_datasets.json  test_archive_extract.py  test_ckan_guardrails.py  test_file_analyze.py  test_gdal_tools.py  test_geo_gated_node.py  test_geo_mcp_integration.py  test_intake_routing.py  test_mcp_integration.py  test_metadata_report_graph.py  test_openai_compat.py  test_org_grounding.py  test_pdf_summarize.py  test_persona_engine.py  test_persona_graph.py  test_persona_registry.py  test_persona_tools.py  test_prompt_registry.py  test_request_auth.py  test_schema_registry.py  test_security.py  test_tool_registry.py  test_tool_schemas.py  test_uploads.py  test_webodm_optimizations.py
ckan-agent-api/ui/: README.md  index.html  package-lock.json  package.json  vite.config.js
ckan-registration/: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt  tapis-system-definition.template.json
ckan-registration/data/: gam_aquifer_map.json  (+2 more)
(+185 files in other folders)
