[project]
name = "ckan-agent-api"
version = "0.1.0"
description = "FastAPI and LangGraph service for CKAN registration agents."
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "langgraph>=0.2",
  "langgraph-checkpoint-sqlite>=2.0",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "openai>=1.50",
  "pydantic>=2.8",
  "python-dotenv>=1.0",
  "requests>=2.31",
  "pypdf>=4.0",
  "pyyaml>=6.0",
  "fastmcp>=3,<4",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
